@@ -1,3 +1,6 @@
+For 1.18.11:
+	- SFColorSetHSV and SFColorGetHSV
+
 For 1.18.10:
 	- reviewing Javascript interfacing. Most SF* nodes should now pass
 	  correctly.
